Pull up following revision(s) (requested by martin in ticket #369): 	usr.sbin/sysinst/disks.c: revision 1.51 PR install/54480: when upgrading a system and re-mounting the target / with proper options, and the installed system does not use NAME= syntax in fstab(5), use the device name we used to get here, instead of the name from fstab, it might be different to what the real system calls the device (compact flash root showing up as wd0 native, but sd? on the card reader used for updating it right now). This is an abuse of the upgrade functionality and in general pretty dangerous when multiple devices are used in the upgraded fstab (e.g. separate /usr), and it used to work more by accident with the old code. However, it is a quite usefull way to upgrade tiny systems with compact flash root, and it used to work - so support it properly (as far as we can).